@startuml ej4
skinparam Monochrome true
skinparam classAttributeIconSize 0 

class Decodificador{
 +setCriterio()
 +getRecomendaciones(): List<Peliculas>
}

Decodificador --> Pelicula : disponibles \n0..*
Decodificador --> Pelicula : reproducidas \n0..*
Decodificador --> Recommend : recomendadas \n1

class Pelicula{
 -String titulo
 -LocalDate anioEstreno
 -double puntaje
}

interface Recommend{
 +getRecomendaciones(): List<Peliculas>
}

class Novedad{
 +getRecomendaciones(): List<Peliculas>
}
class Similar{
 +getRecomendaciones(): List<Peliculas>
}
class PorPuntaje{
 +getRecomendaciones(): List<Peliculas>
}

Recommend <|.. Novedad
Recommend <|.. Similar
Recommend <|.. PorPuntaje
@enduml